[package]
name = "server-commander-srvr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.6"
hex = "0.4.3"
reqwest = { version="0.12.12", features = ['blocking'] }
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
