[package]
name = "server-commander-srvr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.26"
log4rs = "1.3.0"
reqwest = { version="0.12.12", features = ['blocking'] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
